--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
 
-        <div id="page"><!-- entire page containing div; may not be necessary -->
+<div id="page"><!-- entire page containing div; may not be necessary -->
 
         <!-- Banner section -->
         <div class="nav">
@@ -69,7 +69,7 @@
         <div class="banner">
             <div class="parallax-window">
                 <div class="parallax-slider">
-                    <img class="banner-img" src="/img/banner/keyart-1.png">
+                    <img class="banner-img" src="/img/banner/keyart-1a.png">
                     <img class="banner-img" src="/img/banner/keyart-2.png">
                     <img class="banner-img" src="/img/banner/keyart-3_banner.png">
                     <img class="banner-img" src="/img/banner/keyart-4_banner.png">
@@ -78,7 +78,7 @@
             </div>
         </div>
 
-        <!-- Menu Section -->
+<!--  =====================  Menu   ======================= -->
         <div id="menu">
             <h1>Menu Options</h1>
             <div class="menu-board">
