Fix navbar and update images used to new stuff

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         }(document, 'script', 'facebook-jssdk'));</script>
 
     <!-- Banner section; why include nav in this section?? -->
-    <div class="nav navbar-fixed-top">
+    <div class="navbar-inverse navbar-fixed-top">
         <ul class="nav nav-tabs">
             <li><a href="#menu">Menu</a></li>
             <li><a href="#hours">Hours &amp; Location</a></li>
