--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>The Port</title>
-    <meta name="description" content="">
+    <title>The Port fish &amp; Chips</title>
+    <meta name="description" content="The Port Fish &amp; Chips, Located in Little Current, Ontario, serving fresh white fish throughout the summer.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <!-- CSS Sheets -->
-    <link rel="stylesheet" href="css/normalize.min.css">
+    <!-- we don't need normalize, it ships as part of the bootstrap package. -->
+    <!-- we don't need the bootstrap theme; I'll be writing custom component themes / interactions -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="css/main.css">
 
-    <!-- Twitter Card Data -->
-    <!-- TODO: Populate these categories with the Port Site Info, Img -->
+    <!-- TODO Twitter Card Data -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@theport_lc" />
     <meta name="twitter:title" content="The Port Restaurant, Little Current" />
