fixed banner, parallax. Must tweak artwork next.

--- a/index.html
+++ b/index.html
@@ -46,30 +46,74 @@
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
 
-    <!-- Banner section; why include nav in this section?? -->
-    <div class="navbar-inverse navbar-fixed-top">
-        <ul class="nav nav-tabs">
-            <li><a href="#menu">Menu</a></li>
-            <li><a href="#hours">Hours &amp; Location</a></li>
-            <li><a href="#news">News &amp; Specials</a></li>
-            <li><a href="#about">About Us</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </div>
 
-    <!--<img src="img/logo/logo-large.png" alt="the Port Logo" class="logo" />-->
-    <div class="logo"><img class="img-logo" src="/img/logo/logo-large.png" alt="The Port Logo" /></div>
-    <div class="banner">
-        <div id="little-current">
-            <div class="layer layer-00" data-type="parallax" data-depth="0.00"></div>
-            <div class="layer layer-01" data-type="parallax" data-depth="0.10"></div>
-            <div class="layer layer-02" data-type="parallax" data-depth="0.20"></div>
-            <div class="layer layer-03" data-type="parallax" data-depth="0.30"></div>
-            <div class="layer layer-04" data-type="parallax" data-depth="0.40"></div>
+
+<div class="container-fluid"> <!-- Full page container. -->
+
+<div class="banner">
+  <div id="little-current">
+
+            <nav><!-- 100% navigation container -->
+                    <div class="icons col-md-4">
+
+                            <!-- Sunny icon; color set to #513527 -->
+                            <div class="weather-icon col-md-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 178 152.8"><style type="text/css">
+                                .st0{fill:none;stroke:#513527;stroke-width:3.7567;stroke-miterlimit:10;}
+                                .st1{fill:none;stroke:#513527;stroke-width:1.8784;stroke-miterlimit:10;}
+                                .st2{fill:none;stroke:#513527;stroke-width:0.9392;stroke-miterlimit:10;}
+                                .st3{fill:none;stroke:#513527;stroke-width:3.7567;stroke-linecap:round;stroke-miterlimit:10;}
+                                .st4{fill:#513527;}
+                                .st5{fill:none;stroke:#513527;stroke-width:2.7233;stroke-miterlimit:10;}
+                                .st6{fill:none;stroke:#513527;stroke-width:2.7233;stroke-linecap:round;stroke-miterlimit:10;}
+                                .st7{fill:#513527;stroke:#513527;stroke-width:3.2972;stroke-miterlimit:10;}
+                                .st8{fill:none;stroke:#513527;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
+                                .st9{fill:#FFFFFF;stroke:#513527;stroke-width:3.7567;stroke-linecap:round;stroke-miterlimit:10;}
+                                </style><circle class="st0" cx="88.9" cy="76.8" r="31.6"/><line class="st3" x1="128.6" y1="70.5" x2="156.1" y2="66.3"/><line class="st3" x1="122.5" y1="98.4" x2="133.8" y2="105.4"/><line class="st3" x1="106" y1="112.6" x2="118.1" y2="137.8"/><line class="st3" x1="89" y1="116.7" x2="89" y2="129.7"/><line class="st3" x1="73" y1="113.3" x2="61.9" y2="138.7"/><line class="st3" x1="58.2" y1="102.2" x2="48.3" y2="110.9"/><line class="st3" x1="49" y1="82.1" x2="21.9" y2="86.5"/><line class="st3" x1="55.1" y1="54.2" x2="44.2" y2="47.4"/><line class="st3" x1="71.8" y1="40" x2="59.9" y2="15.1"/><line class="st3" x1="89" y1="35.9" x2="89" y2="23.1"/><line class="st3" x1="105" y1="39.6" x2="116.1" y2="14.2"/><line class="st3" x1="119.3" y1="50.4" x2="129.7" y2="41.9"/></svg>
+
+                            </div>
+
+                            <!-- open/closed -->
+                            <div class="open-closed-icon  col-md-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 170.3 144"><style type="text/css">
+                                    .st0{fill:none;stroke:#513527;stroke-width:3.7567;stroke-miterlimit:10;}
+                                    .st1{fill:none;stroke:#513527;stroke-width:1.8784;stroke-miterlimit:10;}
+                                    .st2{fill:none;stroke:#513527;stroke-width:0.9392;stroke-miterlimit:10;}
+                                    .st3{fill:none;stroke:#513527;stroke-width:3.7567;stroke-linecap:round;stroke-miterlimit:10;}
+                                    .st4{fill:#513527;}
+                                    .st5{fill:none;stroke:#513527;stroke-width:2.7233;stroke-miterlimit:10;}
+                                    .st6{fill:none;stroke:#513527;stroke-width:2.7233;stroke-linecap:round;stroke-miterlimit:10;}
+                                    .st7{fill:#513527;stroke:#513527;stroke-width:3.2972;stroke-miterlimit:10;}
+                                    .st8{fill:none;stroke:#513527;stroke-width:4;stroke-linecap:round;stroke-miterlimit:10;}
+                                    .st9{fill:#FFFFFF;stroke:#513527;stroke-width:3.7567;stroke-linecap:round;stroke-miterlimit:10;}
+                                  </style><path class="st8" d="M53.6 43.3c3.9-2.2 8-4.4 12.3-6.3 34.6-15.7 68.7-14.9 76.3 1.7 1.5 3.3 1.6 12-0.5 16.6"/><path class="st8" d="M106 99.6c-5.1 3.2-8.4 4.8-14.3 7.5 -34.6 15.7-68.7 14.9-76.3-1.7 -1.7-3.8-1.9-8.1-0.8-12.7"/><path class="st4" d="M39.3 91.4c0 0 0.1 0.1 0.2 0 9.4-2 16.3-10.5 16.3-20 0-11.3-9.3-20.5-20.7-20.5 -11.4 0-20.7 9.2-20.7 20.5 0 9.6 6.8 18 16.3 20 0.1 0 0.2 0 0.2 0 0 0 0.1-0.1 0.1-0.2l0.5-3.2c0-0.1-0.1-0.3-0.2-0.3C24 85.9 19 79.2 19 71.4c0-9.4 7.1-16.7 16.1-16.7S51.3 62 51.3 71.4c0 7.8-5.1 14.5-12.3 16.3 -0.1 0-0.2 0.2-0.2 0.3l0.5 3.2C39.2 91.3 39.3 91.4 39.3 91.4z"/><path class="st4" d="M88.7 63.8c0-5.9-3.7-12.3-11.7-12.3H62.2c-0.9 0-1.2 0.4-1.2 1.2v37.3c0 0.9 0.4 1.2 1.2 1.2h2c0.9 0 1.2-0.4 1.2-1.2V75.7h11.5C82.8 75.7 88.7 72 88.7 63.8zM65.5 71.3V56.1c0-0.7 0.5-1.2 1.2-1.2h9c5 0 8.4 3.6 8.4 8.9 0 5.2-3.4 8.8-8.4 8.8h-9C66 72.5 65.5 72 65.5 71.3z"/><path class="st4" d="M103.4 70.2c-0.5 0-0.9 0.4-0.9 0.9v1.5c0 0.5 0.4 0.9 0.9 0.9h11.6c0.7 0 1.2-0.5 1.2-1.2v-0.8c0-0.7-0.5-1.2-1.2-1.2H103.4z"/><path class="st4" d="M117.6 91.3c0.6 0 1.1-0.5 1.1-1.1v-1.1c0-0.6-0.5-1.1-1.1-1.1H99.9c-0.8 0-1.5-0.7-1.5-1.5V56.3c0-0.8 0.7-1.5 1.5-1.5h17.8c0.6 0 1.1-0.5 1.1-1.1v-1.1c0-0.6-0.5-1.1-1.1-1.1H95.8c-1 0-1.9 0.8-1.9 1.9v36.1c0 1 0.8 1.9 1.9 1.9H117.6z"/><path class="st4" d="M155.2 91.3c0.9 0 1.3-0.4 1.3-1.2V52.8c0-0.8-0.4-1.2-1.3-1.2h-2c-0.7 0-1.2 0.5-1.2 1.2v28.5c0 0.7-0.9 1-1.3 0.4L129 52.5c-0.5-0.7-1-0.9-1.9-0.9h-0.9c-0.7 0-1.2 0.5-1.2 1.2v37.3c0 0.7 0.5 1.2 1.2 1.2h2c0.7 0 1.2-0.5 1.2-1.2V61.5c0-0.7 0.9-1 1.3-0.4l21.7 29.3c0.5 0.7 1 0.9 1.9 0.9H155.2z"/></svg>
+
+                            </div>
+
+                    </div>
+
+                    <div class="navbar navbar-static-top col-md-8">
+                        <ul class="nav nav-tabs">
+                            <li><a href="#menu">Menu</a></li>
+                            <li><a href="#hours">Hours &amp; Location</a></li>
+                            <li><a href="#news">News &amp; Specials</a></li>
+                            <li><a href="#about">About Us</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                        </ul>
+                    </div>
+            </nav>
+
+                <div class="layer layer-00" data-type="parallax" data-depth="0.10"></div>
+                <div class="layer layer-01" data-type="parallax" data-depth="0.35"></div>
+                <div class="layer layer-02" data-type="parallax" data-depth="0.60"></div>
+                <div class="layer layer-03" data-type="parallax" data-depth="0.80"></div>
+                <div class="layer layer-04" data-type="parallax" data-depth="1.00"></div><!-- JW: Need to have top level layer == scroll speed 1:1 -->
+            </div>
         </div>
-    </div>
-    <div id="page" class="container-fluid">
-        <!-- Menu Section -->
+
+
+<div class="main-contain">
+<!-- ========================= Menu =========================-->
         <div class="menu">
             <h1>Menu Options</h1>
             <div class="menu-board">
@@ -370,27 +414,27 @@
             <div class="colophon">
                 <svg id="Shrink" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54.7 46.8">
                     <style>
-                        .st0 {
+                        .st-0 {
                             fill: #1a4770;
                         }
                     </style>
                     <path id="Fork_1_"
-                          class="st0"
+                          class="st-0"
                           d="M10.8 44.9h.4c.7-.1 1.2-.6 1.7-1.1 1.5-1.5 3-3 4.4-4.6 1.5-1.7 11.9-13.4 12.4-14.2.6-.7 6.2-6.3 6.9-6.7.8-.4 2.9 0 4.3-.9S49.4 8.2 51.2 5c0 0 0-.5-.3-.1l-.3.4s-6.1 6.5-6.6 7.1c-.5.6-1.3 1.4-1.5 1.5-.2.1-.6-.3-.2-.7.4-.4 7.4-8.4 7.6-8.7.3-.3.6-1-.1-.4s-7.9 7.9-8.1 8.1c-.2.2-.5.4-.7.5-.2 0-.5-.4.1-.9.5-.5 7.2-8 7.5-8.3.2-.2.5-.6.5-.6-.1-.1-.2-.2-.6.1-.4.3-8.1 8-8.3 8.1-.2.2-.4.2-.6.1-.1-.1-.3-.2.1-.7.4-.4 7.9-8.6 8.1-8.8 0 0 .1-.1 0-.2s-.2-.1-.4 0-8.8 7.9-9.7 9c-.9 1.1-1.8 1.7-2 2.9-.2 1.2 0 2.4-.5 3.1-.6.7-4.7 5.4-6.7 7.2-.6.5-1.2 1.1-1.8 1.6-1.1.9-2.1 1.8-3.2 2.8-1.3 1.2-2.6 2.3-4 3.5-1.4 1.2-2.7 2.4-4.1 3.6l-3.6 3.3c-.8.8-1.7 1.6-2.4 2.5-.4.5-.8.9-.8 1.6v.3c.3.9 1.3 1.9 2.2 2z" />
                     <path id="Knife_1_"
-                          class="st0"
+                          class="st-0"
                           d="M47.9 44.8s-.1 0-.1.1c-.6.2-1.1.1-1.6-.3-1-.9-19.9-20.2-20.1-20.4-.2-.2-.5-.3-1-.7-.5-.4-1.7-.6-2.6-.4-.9.2-2.2-1.3-3.1-2.1-1-.8-12.9-13.2-12.9-16.4 0 0 .1-1 .8-1.5.7-.5 1.5-.1 2.4 1 1 1.1 14.9 15.4 16 16.5 1.2 1.1 6.6 6.5 9.3 8.8 2.7 2.4 11.9 10.3 13.4 12 .5.5 1 1.2.8 2-.2.6-.8 1.2-1.3 1.4z" />
                     <path class="st0"
                           d="M37.2 42.5c-.6-1.2-1.6-2.4-2.9-3.3-1.6-1.1-3-1.7-5.4-2-.2 0-.5-.1-.8-.1-1.2 0-2 .8-2.4 1.2-.4-.2-.8-.3-1.1-.3-1 0-1.5.7-1.8 1.1-.3-.1-.8-.2-1.2.4-.3.5-.1 1.1.1 1.5-.5.3-.8.6-.9 1-.1.6.4 1.1.6 1.3-.5 1.2-.7 2.4-.8 3.3 0 .1 0 .2.1.2.1.1.1.1.2.1h16.2c.4 0 .5 0 .8-.3.6-.8-.2-2.9-.7-4.1zm-16 3.7c.1-.8.3-1.9.7-2.9 0-.1.1-.2.1-.3.1-.1.1-.2.1-.3.7-1.3 2.5-2.7 5.2-2.7 1.3 0 2.7.7 3.9 2 1.1 1.1 2 2.6 2.6 4.2H21.2zm14 .1h-.6c-.6-1.7-1.6-3.4-2.8-4.6-1.4-1.4-2.9-2.1-4.4-2.1-1.3 0-2.5.3-3.5.9-.9.5-1.7 1.3-2.2 2.1 0 .1-.1.1-.1.2-.2-.2-.4-.5-.3-.7 0-.3.5-.6.8-.7.1 0 .1-.1.2-.2 0-.1 0-.2-.1-.3-.1-.2-.5-.8-.3-1.1.2-.3.3-.2.6-.1h.1c.1 0 .3 0 .3-.2 0 0 .4-1 1.4-1 .3 0 .7.1 1.1.3.1.1.3 0 .4-.1 0 0 .9-1.2 2.1-1.2.7 0 1.2.3 1.6.8.3.4.3.8.3.8 0 .1.1.2.1.2.1.1.2.1.3 0 .2-.1 1-.4 1.4-.1.5.4.6 1.1.6 1.2 0 .1 0 .2.1.2.1.1.2.1.3.1 0 0 .6-.1.9.2.2.3.1.8 0 1v.3c.1.1.2.1.3.1 0 0 .7-.1 1 .3.2.3-.4.8-.4.8-.1.1-.1.2-.1.3 0 .1.1.2.2.2 0 0 .8.2 1.1.8.3.7-.1 1.3-.4 1.6zm2.3-.2c-.1.2-.3.2-.7.2h-.9c.3-.4.5-1 .2-1.6-.2-.5-.6-.7-1-.9.3-.3.4-.8.2-1.2-.3-.4-.8-.6-1.1-.6.1-.3.1-.8-.2-1.2-.3-.4-.8-.5-1.2-.4 0-.2-.1-.4-.1-.4-.1-.3-.3-.7-.7-1-.5-.4-1.2-.2-1.6-.1-.1-.2-.1-.5-.3-.7 0-.1-.1-.1-.1-.2 3.4.7 5.8 2.9 6.7 4.8 1 2.2 1 3.1.8 3.3z" />
-                    <path class="st0"
+                    <path class="st-0"
                           d="M30.1 42.2c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zm0 1.2c-.2 0-.3-.1-.3-.3 0-.2.1-.3.3-.3.2 0 .3.1.3.3 0 .2-.1.3-.3.3zM28.6 43.9c-.5 0-.9.4-.9.9s.4.9.9.9.9-.4.9-.9-.4-.9-.9-.9zm0 1.2c-.2 0-.3-.1-.3-.3 0-.2.1-.3.3-.3.2 0 .3.1.3.3 0 .2-.1.3-.3.3zM29 42.3c0-.5-.4-.9-.9-.9s-.9.4-.9.9.4.9.9.9.9-.4.9-.9zm-1.2 0c0-.2.1-.3.3-.3.2 0 .3.1.3.3 0 .2-.1.3-.3.3-.2 0-.3-.1-.3-.3zM17 24.9c-.5 0-.8.4-.8.8 0 .5.4.8.8.8.5 0 .8-.4.8-.8s-.3-.8-.8-.8zm0 1c-.1 0-.2-.1-.2-.2s.1-.2.2-.2.2.1.2.2-.1.2-.2.2z" />
-                    <path class="st0"
+                    <path class="st-0"
                           d="M20.1 26.3c.1-.2.1-.3.1-.5s-.1-.4-.3-.6c-.1-.1-.3-.2-.5-.2-.6-.8-2.1-1.6-3.4-1.8-.3-.1-.7-.1-1-.1-.4-.6-1-.9-1.7-1.1-.6-.1-1.8 0-2.8.2-1.4.3-2.2.6-2.4 1-.1.2-.1.4.2.7.1 0 .1.1.2.1.1.1.3.2.3.3-1.8.8-3.3 1.8-4.1 2.5-.7-.6-2.1-1.3-3.7-1.3-.5 0-.8.1-.9.3-.1.1-.1.3-.1.4.1.4.6 1.2 1.4 1.6-.7.6-.9 1.4-.9 1.9 0 .2.1.3.1.4.1.1.2.2.4.1.1 0 .3 0 .4-.1h.1c1.6-.4 2.8-1.2 3.4-1.9.8.3 3.4 1.4 6 1.7-.1 0-.2.1-.2.1-.4.2-.4.5-.3.6.1.5.7.9 1.5.9.3 0 .5 0 .8-.1.8-.3 1.4-.9 1.7-1.6.9-.1 1.7-.4 2.5-.7.6-.2 1.2-.6 1.3-.7.2-.1.4-.2.5-.4.3-.2.5-.5.7-.8h.2c.5-.1.8-.5.7-.9-.1.1-.1.1-.2 0zm-9.4-3.4c1-.2 2.1-.3 2.4-.2.3.1.7.2.9.5-.6 0-1.2.1-1.8.1-.9.1-1.9.4-2.8.8-.1-.2-.3-.3-.6-.5 0 0-.1 0-.1-.1.3-.2.9-.4 2-.6zm-9.3 6.7c-.1 0-.1 0 0 0-.1 0-.2 0-.2.1 0-.6.3-1.3 1.1-1.6.1-.1.2-.2.2-.3 0-.1-.1-.3-.3-.3-.7-.1-1.4-.9-1.5-1.3h.4c1.3 0 2.5.6 3.2 1.1-.1.1-.2.3-.1.5 0 .1.1.2.2.3-.6.5-1.6 1.2-3 1.5zm10.9 1.3c-.1.1-.3.1-.5.1-.5 0-.8-.2-.9-.4.1-.1.3-.1.5-.1.3-.1.7-.2 1.1-.4.4-.2.6-.6.8-.8.2-.2.3-.4.4-.4h.1s.1.3 0 .6v.1c-.3.4-.7 1-1.5 1.3zm2.1-1.6c0-.3 0-.6-.2-.8-.2-.2-.4-.3-.7-.2-.4.1-.6.4-.8.7-.1.2-.2.4-.4.5-3.3.1-7.4-1.8-7.4-1.8s-.1-.1 0-.1c.8-.6 2.5-1.8 4.5-2.7 1-.4 2-.7 3-.9.8-.1 1.6-.2 2.4-.1h.5c-.5.6-.9 1.3-.8 2.4.1 1.1.6 2.1 1.4 2.7-.5 0-1 .2-1.5.3zm5.2-3.3c-.2.2-.1.4 0 .5v.1c0 .1-.1.2-.2.2h-.1c-.2-.1-.4 0-.5.1-.2.3-.4.5-.7.8-.1.1-.3.2-.4.3-.1.1-.5.3-.9.5h-.1c-.8-.5-1.4-1.4-1.5-2.5-.1-1 .4-1.6.9-2.2 1.3.2 2.6 1 2.9 1.6 0 .1.2.2.4.2h.1l.1.1v.3z" />
                     <path id="Shake_1_"
-                          class="st0"
+                          class="st-0"
                           d="M33.2.8l-.4-.7c0-.1-.2-.1-.3-.1l-2 1.1-.1.1c-.1 0-.1.1-.1.1l-.1.1-.9 2.2c-.3-.1-.6-.1-.9-.1-.9 0-1.8.3-2.5.9-.7.6-1.1 1.3-1.3 2.2-.3.2-.5.5-.5.8 0 .2.1.4.2.6l1.3 8.4c0 .1.1.2.3.2H31c.1 0 .2-.1.3-.2L32.6 8c.1-.2.2-.5.2-.6 0-.3-.2-.6-.5-.8h-.1c-.2-1-.8-1.9-1.7-2.4l.8-2 1.8-1c.1 0 .1-.1.1-.2.1 0 .1-.1 0-.2zm-2.5 15.4h-4.6l-1.2-7.9h4.5c.1 0 .3-.1.3-.3 0-.1-.1-.3-.3-.3h-4.6s-.1-.2-.1-.3c0-.1.1-.3.2-.3H32c.1.1.2.3.2.3 0 .1-.1.2-.1.3h-.9c-.1 0-.3.1-.3.3 0 .1.1.3.3.3h.7l-1.2 7.9zM31 1.7c-.1 0-.1.1-.1.1l-1 2.3c-.1.1 0 .3.1.3.8.5 1.4 1.2 1.6 2.1h-6.5C25.5 5 26.8 4 28.3 4c.3 0 .7 0 1 .1.1 0 .3 0 .3-.2l1-2.5 1.8-1 .1.2L31 1.7z" />
                     <path id="Fries_1_"
-                          class="st0"
+                          class="st-0"
                           d="M54.4 25.4h-1.1l.7-1.6v-.2c0-.1-.1-.1-.2-.1h-2l.8-2.1v-.2c-.1-.1-.1-.1-.2-.1l-1.5.2.2-1.7c0-.1 0-.1-.1-.2s-.1-.1-.2-.1l-2 .2-.3-.9c0-.1-.1-.1-.1-.1h-.2l-1.9.5v-.1c0-.1-.1-.1-.1-.1H46l-2.3.9c-.1 0-.2.2-.1.3l.2.6h-1.5c-.1 0-.2 0-.2.1s-.1.2 0 .2l.6 1.6h-1.3c-.1 0-.1 0-.2.1 0 .1-.1.1 0 .2l.7 2.6h-1c-.1 0-.2.1-.2.2 0 1.7 0 3 .6 4.1.5 1 1.5 1.7 3.1 2.5-.2.2-.3.5-.3.9 0 .1.1.2.2.2h6.6c.1 0 .2-.1.2-.2 0-.4-.1-.7-.3-.9 1.7-.8 2.8-1.7 3.4-2.8.6-1.2.7-2.5.7-3.8-.2-.1-.3-.2-.5-.2zm-1-1.5l-.6 1.5h-1.7l.5-1.5h1.8zm-2.8 1.5h-1.7l1.5-3.7 1.6-.2-1.4 3.9zm-2.2-3.6v3.6h-2v-3l2-.6zm2-.7h-.2c-.1 0-.2.1-.2.2L48.9 24v-2.6c0-.1 0-.2-.1-.2s-.1-.1-.2 0h-.1l.1-1.5 1.9-.1-.1 1.5zm-2.3-2.3l.2.6c-.1 0-.1.1-.1.2l-.2 1.8-.8.2-.7-2.2 1.6-.6zM44 20.1l1.9-.8v.1l.8 2.4-.6.2c-.1 0-.2.1-.2.2v1.3l-1.1-2.9c0-.1-.1-.2-.2-.2h-.5l-.1-.3zm-1.5.9h2l1.5 3.9v.4h-1.4l-.9-2.7c0-.1-.1-.2-.2-.2H43l-.5-1.4zm-1 1.9h1.8l.8 2.4h-1.9l-.7-2.4zM50 32h-1c-.1 0-.2.1-.2.2s.1.2.2.2h1.1c.1 0 .2.2.2.4h-6c0-.3.2-.4.2-.4h2.6c.1 0 .2-.1.2-.2s-.1-.2-.2-.2h-2.3c-1.8-.8-2.8-1.5-3.3-2.5-.5-.9-.6-1.9-.6-3.7h13.3c0 2.7-.4 4.6-4.2 6.2z" />
                 </svg>
             </div>
@@ -442,7 +486,9 @@
 
 
     </footer>
-    </div><!--end page div-->
+
+  </div><!-- end of main-contain -->
+</div><!--end of container-fluid-->
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 
